Rebuild/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT

Grammar

Rule 0     S' -> program
Rule 1     program -> preprocesor_directives_list function
Rule 2     program -> function
Rule 3     preprocesor_directives_list -> preprocesor_directive preprocesor_directives_list
Rule 4     preprocesor_directives_list -> preprocesor_directive
Rule 5     preprocesor_directive -> INCLUDE HEADER
Rule 6     function -> INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE
Rule 7     statement_list -> statement statement_list
Rule 8     statement_list -> statement
Rule 9     statement -> declaration
Rule 10    statement -> assignment
Rule 11    statement -> for_loop
Rule 12    statement -> if_statement
Rule 13    statement -> function_call
Rule 14    statement -> return_statement
Rule 15    identifier_list -> IDENTIFIER
Rule 16    identifier_list -> IDENTIFIER COMMA identifier_list
Rule 17    declaration -> type_specifier IDENTIFIER EQUAL expression SEMICOLON
Rule 18    declaration -> type_specifier identifier_list SEMICOLON
Rule 19    declaration -> type_specifier identifier_list EQUAL expression SEMICOLON
Rule 20    declaration -> type_specifier identifier_list LBRAKET NUMBER RBRAKET SEMICOLON
Rule 21    type_specifier -> INT
Rule 22    type_specifier -> FLOAT
Rule 23    type_specifier -> CHAR
Rule 24    compound_assignment -> PLUS EQUAL
Rule 25    compound_assignment -> MINUS EQUAL
Rule 26    compound_assignment -> TIMES EQUAL
Rule 27    compound_assignment -> DIVIDE EQUAL
Rule 28    assignment -> IDENTIFIER EQUAL expression SEMICOLON
Rule 29    assignment -> IDENTIFIER compound_assignment expression SEMICOLON
Rule 30    assignment -> IDENTIFIER LBRAKET expression RBRAKET compound_assignment expression SEMICOLON
Rule 31    assignment -> IDENTIFIER LBRAKET expression RBRAKET EQUAL expression SEMICOLON
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression TIMES expression
Rule 35    expression -> expression DIVIDE expression
Rule 36    expression -> LPAREN expression RPAREN
Rule 37    expression -> NUMBER
Rule 38    expression -> CHAR_LITERAL
Rule 39    expression -> CHAR
Rule 40    expression -> IDENTIFIER
Rule 41    expression -> IDENTIFIER LBRAKET expression RBRAKET
Rule 42    expression_list -> expression
Rule 43    expression_list -> expression COMMA expression_list
Rule 44    unitarymodifiers -> IDENTIFIER PLUS PLUS
Rule 45    unitarymodifiers -> IDENTIFIER MINUS MINUS
Rule 46    for_loop -> FOR LPAREN assignment condition SEMICOLON unitarymodifiers RPAREN LBRACE statement_list RBRACE
Rule 47    condition -> expression COMPARER expression
Rule 48    if_statement -> IF LPAREN condition RPAREN LBRACE statement_list RBRACE
Rule 49    if_statement -> IF LPAREN condition RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 50    function_call -> PRINTF LPAREN STRING COMMA IDENTIFIER RPAREN SEMICOLON
Rule 51    function_call -> PRINTF LPAREN STRING RPAREN SEMICOLON
Rule 52    function_call -> PRINTF LPAREN STRING COMMA expression_list RPAREN SEMICOLON
Rule 53    function_call -> SCANF LPAREN STRING COMMA AMPERSAND IDENTIFIER RPAREN SEMICOLON
Rule 54    return_statement -> RETURN SEMICOLON
Rule 55    return_statement -> RETURN expression SEMICOLON

Terminals, with rules where they appear

AMPERSAND            : 53
CHAR                 : 23 39
CHAR_LITERAL         : 38
COMMA                : 16 43 50 52 53
COMPARER             : 47
DIVIDE               : 27 35
DOT                  : 
ELSE                 : 49
EQUAL                : 17 19 24 25 26 27 28 31
FLOAT                : 22
FOR                  : 46
HEADER               : 5
IDENTIFIER           : 15 16 17 28 29 30 31 40 41 44 45 50 53
IF                   : 48 49
INCLUDE              : 5
INT                  : 6 21
LBRACE               : 6 46 48 49 49
LBRAKET              : 20 30 31 41
LPAREN               : 6 36 46 48 49 50 51 52 53
MAIN                 : 6
MINUS                : 25 33 45 45
NUMBER               : 20 37
PLUS                 : 24 32 44 44
PRINTF               : 50 51 52
RBRACE               : 6 46 48 49 49
RBRAKET              : 20 30 31 41
RETURN               : 54 55
RPAREN               : 6 36 46 48 49 50 51 52 53
SCANF                : 53
SEMICOLON            : 17 18 19 20 28 29 30 31 46 50 51 52 53 54 55
STRING               : 50 51 52 53
TIMES                : 26 34
error                : 

Nonterminals, with rules where they appear

assignment           : 10 46
compound_assignment  : 29 30
condition            : 46 48 49
declaration          : 9
expression           : 17 19 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 41 42 43 47 47 55
expression_list      : 43 52
for_loop             : 11
function             : 1 2
function_call        : 13
identifier_list      : 16 18 19 20
if_statement         : 12
preprocesor_directive : 3 4
preprocesor_directives_list : 1 3
program              : 0
return_statement     : 14
statement            : 7 8
statement_list       : 6 7 46 48 49 49
type_specifier       : 17 18 19 20
unitarymodifiers     : 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . preprocesor_directives_list function
    (2) program -> . function
    (3) preprocesor_directives_list -> . preprocesor_directive preprocesor_directives_list
    (4) preprocesor_directives_list -> . preprocesor_directive
    (6) function -> . INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE
    (5) preprocesor_directive -> . INCLUDE HEADER

    INT             shift and go to state 5
    INCLUDE         shift and go to state 6

    program                        shift and go to state 1
    preprocesor_directives_list    shift and go to state 2
    function                       shift and go to state 3
    preprocesor_directive          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> preprocesor_directives_list . function
    (6) function -> . INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE

    INT             shift and go to state 5

    function                       shift and go to state 7

state 3

    (2) program -> function .

    $end            reduce using rule 2 (program -> function .)


state 4

    (3) preprocesor_directives_list -> preprocesor_directive . preprocesor_directives_list
    (4) preprocesor_directives_list -> preprocesor_directive .
    (3) preprocesor_directives_list -> . preprocesor_directive preprocesor_directives_list
    (4) preprocesor_directives_list -> . preprocesor_directive
    (5) preprocesor_directive -> . INCLUDE HEADER

    INT             reduce using rule 4 (preprocesor_directives_list -> preprocesor_directive .)
    INCLUDE         shift and go to state 6

    preprocesor_directive          shift and go to state 4
    preprocesor_directives_list    shift and go to state 8

state 5

    (6) function -> INT . MAIN LPAREN RPAREN LBRACE statement_list RBRACE

    MAIN            shift and go to state 9


state 6

    (5) preprocesor_directive -> INCLUDE . HEADER

    HEADER          shift and go to state 10


state 7

    (1) program -> preprocesor_directives_list function .

    $end            reduce using rule 1 (program -> preprocesor_directives_list function .)


state 8

    (3) preprocesor_directives_list -> preprocesor_directive preprocesor_directives_list .

    INT             reduce using rule 3 (preprocesor_directives_list -> preprocesor_directive preprocesor_directives_list .)


state 9

    (6) function -> INT MAIN . LPAREN RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 11


state 10

    (5) preprocesor_directive -> INCLUDE HEADER .

    INCLUDE         reduce using rule 5 (preprocesor_directive -> INCLUDE HEADER .)
    INT             reduce using rule 5 (preprocesor_directive -> INCLUDE HEADER .)


state 11

    (6) function -> INT MAIN LPAREN . RPAREN LBRACE statement_list RBRACE

    RPAREN          shift and go to state 12


state 12

    (6) function -> INT MAIN LPAREN RPAREN . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 13


state 13

    (6) function -> INT MAIN LPAREN RPAREN LBRACE . statement_list RBRACE
    (7) statement_list -> . statement statement_list
    (8) statement_list -> . statement
    (9) statement -> . declaration
    (10) statement -> . assignment
    (11) statement -> . for_loop
    (12) statement -> . if_statement
    (13) statement -> . function_call
    (14) statement -> . return_statement
    (17) declaration -> . type_specifier IDENTIFIER EQUAL expression SEMICOLON
    (18) declaration -> . type_specifier identifier_list SEMICOLON
    (19) declaration -> . type_specifier identifier_list EQUAL expression SEMICOLON
    (20) declaration -> . type_specifier identifier_list LBRAKET NUMBER RBRAKET SEMICOLON
    (28) assignment -> . IDENTIFIER EQUAL expression SEMICOLON
    (29) assignment -> . IDENTIFIER compound_assignment expression SEMICOLON
    (30) assignment -> . IDENTIFIER LBRAKET expression RBRAKET compound_assignment expression SEMICOLON
    (31) assignment -> . IDENTIFIER LBRAKET expression RBRAKET EQUAL expression SEMICOLON
    (46) for_loop -> . FOR LPAREN assignment condition SEMICOLON unitarymodifiers RPAREN LBRACE statement_list RBRACE
    (48) if_statement -> . IF LPAREN condition RPAREN LBRACE statement_list RBRACE
    (49) if_statement -> . IF LPAREN condition RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (50) function_call -> . PRINTF LPAREN STRING COMMA IDENTIFIER RPAREN SEMICOLON
    (51) function_call -> . PRINTF LPAREN STRING RPAREN SEMICOLON
    (52) function_call -> . PRINTF LPAREN STRING COMMA expression_list RPAREN SEMICOLON
    (53) function_call -> . SCANF LPAREN STRING COMMA AMPERSAND IDENTIFIER RPAREN SEMICOLON
    (54) return_statement -> . RETURN SEMICOLON
    (55) return_statement -> . RETURN expression SEMICOLON
    (21) type_specifier -> . INT
    (22) type_specifier -> . FLOAT
    (23) type_specifier -> . CHAR

    IDENTIFIER      shift and go to state 24
    FOR             shift and go to state 25
    IF              shift and go to state 26
    PRINTF          shift and go to state 27
    SCANF           shift and go to state 28
    RETURN          shift and go to state 29
    INT             shift and go to state 14
    FLOAT           shift and go to state 30
    CHAR            shift and go to state 31

    statement_list                 shift and go to state 15
    statement                      shift and go to state 16
    declaration                    shift and go to state 17
    assignment                     shift and go to state 18
    for_loop                       shift and go to state 19
    if_statement                   shift and go to state 20
    function_call                  shift and go to state 21
    return_statement               shift and go to state 22
    type_specifier                 shift and go to state 23

state 14

    (21) type_specifier -> INT .

    IDENTIFIER      reduce using rule 21 (type_specifier -> INT .)


state 15

    (6) function -> INT MAIN LPAREN RPAREN LBRACE statement_list . RBRACE

    RBRACE          shift and go to state 32


state 16

    (7) statement_list -> statement . statement_list
    (8) statement_list -> statement .
    (7) statement_list -> . statement statement_list
    (8) statement_list -> . statement
    (9) statement -> . declaration
    (10) statement -> . assignment
    (11) statement -> . for_loop
    (12) statement -> . if_statement
    (13) statement -> . function_call
    (14) statement -> . return_statement
    (17) declaration -> . type_specifier IDENTIFIER EQUAL expression SEMICOLON
    (18) declaration -> . type_specifier identifier_list SEMICOLON
    (19) declaration -> . type_specifier identifier_list EQUAL expression SEMICOLON
    (20) declaration -> . type_specifier identifier_list LBRAKET NUMBER RBRAKET SEMICOLON
    (28) assignment -> . IDENTIFIER EQUAL expression SEMICOLON
    (29) assignment -> . IDENTIFIER compound_assignment expression SEMICOLON
    (30) assignment -> . IDENTIFIER LBRAKET expression RBRAKET compound_assignment expression SEMICOLON
    (31) assignment -> . IDENTIFIER LBRAKET expression RBRAKET EQUAL expression SEMICOLON
    (46) for_loop -> . FOR LPAREN assignment condition SEMICOLON unitarymodifiers RPAREN LBRACE statement_list RBRACE
    (48) if_statement -> . IF LPAREN condition RPAREN LBRACE statement_list RBRACE
    (49) if_statement -> . IF LPAREN condition RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (50) function_call -> . PRINTF LPAREN STRING COMMA IDENTIFIER RPAREN SEMICOLON
    (51) function_call -> . PRINTF LPAREN STRING RPAREN SEMICOLON
    (52) function_call -> . PRINTF LPAREN STRING COMMA expression_list RPAREN SEMICOLON
    (53) function_call -> . SCANF LPAREN STRING COMMA AMPERSAND IDENTIFIER RPAREN SEMICOLON
    (54) return_statement -> . RETURN SEMICOLON
    (55) return_statement -> . RETURN expression SEMICOLON
    (21) type_specifier -> . INT
    (22) type_specifier -> . FLOAT
    (23) type_specifier -> . CHAR

    RBRACE          reduce using rule 8 (statement_list -> statement .)
    IDENTIFIER      shift and go to state 24
    FOR             shift and go to state 25
    IF              shift and go to state 26
    PRINTF          shift and go to state 27
    SCANF           shift and go to state 28
    RETURN          shift and go to state 29
    INT             shift and go to state 14
    FLOAT           shift and go to state 30
    CHAR            shift and go to state 31

    statement                      shift and go to state 16
    statement_list                 shift and go to state 33
    declaration                    shift and go to state 17
    assignment                     shift and go to state 18
    for_loop                       shift and go to state 19
    if_statement                   shift and go to state 20
    function_call                  shift and go to state 21
    return_statement               shift and go to state 22
    type_specifier                 shift and go to state 23

state 17

    (9) statement -> declaration .

    IDENTIFIER      reduce using rule 9 (statement -> declaration .)
    FOR             reduce using rule 9 (statement -> declaration .)
    IF              reduce using rule 9 (statement -> declaration .)
    PRINTF          reduce using rule 9 (statement -> declaration .)
    SCANF           reduce using rule 9 (statement -> declaration .)
    RETURN          reduce using rule 9 (statement -> declaration .)
    INT             reduce using rule 9 (statement -> declaration .)
    FLOAT           reduce using rule 9 (statement -> declaration .)
    CHAR            reduce using rule 9 (statement -> declaration .)
    RBRACE          reduce using rule 9 (statement -> declaration .)


state 18

    (10) statement -> assignment .

    IDENTIFIER      reduce using rule 10 (statement -> assignment .)
    FOR             reduce using rule 10 (statement -> assignment .)
    IF              reduce using rule 10 (statement -> assignment .)
    PRINTF          reduce using rule 10 (statement -> assignment .)
    SCANF           reduce using rule 10 (statement -> assignment .)
    RETURN          reduce using rule 10 (statement -> assignment .)
    INT             reduce using rule 10 (statement -> assignment .)
    FLOAT           reduce using rule 10 (statement -> assignment .)
    CHAR            reduce using rule 10 (statement -> assignment .)
    RBRACE          reduce using rule 10 (statement -> assignment .)


state 19

    (11) statement -> for_loop .

    IDENTIFIER      reduce using rule 11 (statement -> for_loop .)
    FOR             reduce using rule 11 (statement -> for_loop .)
    IF              reduce using rule 11 (statement -> for_loop .)
    PRINTF          reduce using rule 11 (statement -> for_loop .)
    SCANF           reduce using rule 11 (statement -> for_loop .)
    RETURN          reduce using rule 11 (statement -> for_loop .)
    INT             reduce using rule 11 (statement -> for_loop .)
    FLOAT           reduce using rule 11 (statement -> for_loop .)
    CHAR            reduce using rule 11 (statement -> for_loop .)
    RBRACE          reduce using rule 11 (statement -> for_loop .)


state 20

    (12) statement -> if_statement .

    IDENTIFIER      reduce using rule 12 (statement -> if_statement .)
    FOR             reduce using rule 12 (statement -> if_statement .)
    IF              reduce using rule 12 (statement -> if_statement .)
    PRINTF          reduce using rule 12 (statement -> if_statement .)
    SCANF           reduce using rule 12 (statement -> if_statement .)
    RETURN          reduce using rule 12 (statement -> if_statement .)
    INT             reduce using rule 12 (statement -> if_statement .)
    FLOAT           reduce using rule 12 (statement -> if_statement .)
    CHAR            reduce using rule 12 (statement -> if_statement .)
    RBRACE          reduce using rule 12 (statement -> if_statement .)


state 21

    (13) statement -> function_call .

    IDENTIFIER      reduce using rule 13 (statement -> function_call .)
    FOR             reduce using rule 13 (statement -> function_call .)
    IF              reduce using rule 13 (statement -> function_call .)
    PRINTF          reduce using rule 13 (statement -> function_call .)
    SCANF           reduce using rule 13 (statement -> function_call .)
    RETURN          reduce using rule 13 (statement -> function_call .)
    INT             reduce using rule 13 (statement -> function_call .)
    FLOAT           reduce using rule 13 (statement -> function_call .)
    CHAR            reduce using rule 13 (statement -> function_call .)
    RBRACE          reduce using rule 13 (statement -> function_call .)


state 22

    (14) statement -> return_statement .

    IDENTIFIER      reduce using rule 14 (statement -> return_statement .)
    FOR             reduce using rule 14 (statement -> return_statement .)
    IF              reduce using rule 14 (statement -> return_statement .)
    PRINTF          reduce using rule 14 (statement -> return_statement .)
    SCANF           reduce using rule 14 (statement -> return_statement .)
    RETURN          reduce using rule 14 (statement -> return_statement .)
    INT             reduce using rule 14 (statement -> return_statement .)
    FLOAT           reduce using rule 14 (statement -> return_statement .)
    CHAR            reduce using rule 14 (statement -> return_statement .)
    RBRACE          reduce using rule 14 (statement -> return_statement .)


state 23

    (17) declaration -> type_specifier . IDENTIFIER EQUAL expression SEMICOLON
    (18) declaration -> type_specifier . identifier_list SEMICOLON
    (19) declaration -> type_specifier . identifier_list EQUAL expression SEMICOLON
    (20) declaration -> type_specifier . identifier_list LBRAKET NUMBER RBRAKET SEMICOLON
    (15) identifier_list -> . IDENTIFIER
    (16) identifier_list -> . IDENTIFIER COMMA identifier_list

    IDENTIFIER      shift and go to state 34

    identifier_list                shift and go to state 35

state 24

    (28) assignment -> IDENTIFIER . EQUAL expression SEMICOLON
    (29) assignment -> IDENTIFIER . compound_assignment expression SEMICOLON
    (30) assignment -> IDENTIFIER . LBRAKET expression RBRAKET compound_assignment expression SEMICOLON
    (31) assignment -> IDENTIFIER . LBRAKET expression RBRAKET EQUAL expression SEMICOLON
    (24) compound_assignment -> . PLUS EQUAL
    (25) compound_assignment -> . MINUS EQUAL
    (26) compound_assignment -> . TIMES EQUAL
    (27) compound_assignment -> . DIVIDE EQUAL

    EQUAL           shift and go to state 36
    LBRAKET         shift and go to state 38
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    TIMES           shift and go to state 41
    DIVIDE          shift and go to state 42

    compound_assignment            shift and go to state 37

state 25

    (46) for_loop -> FOR . LPAREN assignment condition SEMICOLON unitarymodifiers RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 43


state 26

    (48) if_statement -> IF . LPAREN condition RPAREN LBRACE statement_list RBRACE
    (49) if_statement -> IF . LPAREN condition RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN          shift and go to state 44


state 27

    (50) function_call -> PRINTF . LPAREN STRING COMMA IDENTIFIER RPAREN SEMICOLON
    (51) function_call -> PRINTF . LPAREN STRING RPAREN SEMICOLON
    (52) function_call -> PRINTF . LPAREN STRING COMMA expression_list RPAREN SEMICOLON

    LPAREN          shift and go to state 45


state 28

    (53) function_call -> SCANF . LPAREN STRING COMMA AMPERSAND IDENTIFIER RPAREN SEMICOLON

    LPAREN          shift and go to state 46


state 29

    (54) return_statement -> RETURN . SEMICOLON
    (55) return_statement -> RETURN . expression SEMICOLON
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . LPAREN expression RPAREN
    (37) expression -> . NUMBER
    (38) expression -> . CHAR_LITERAL
    (39) expression -> . CHAR
    (40) expression -> . IDENTIFIER
    (41) expression -> . IDENTIFIER LBRAKET expression RBRAKET

    SEMICOLON       shift and go to state 47
    LPAREN          shift and go to state 49
    NUMBER          shift and go to state 50
    CHAR_LITERAL    shift and go to state 51
    CHAR            shift and go to state 52
    IDENTIFIER      shift and go to state 53

    expression                     shift and go to state 48

state 30

    (22) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 22 (type_specifier -> FLOAT .)


state 31

    (23) type_specifier -> CHAR .

    IDENTIFIER      reduce using rule 23 (type_specifier -> CHAR .)


state 32

    (6) function -> INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE .

    $end            reduce using rule 6 (function -> INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE .)


state 33

    (7) statement_list -> statement statement_list .

    RBRACE          reduce using rule 7 (statement_list -> statement statement_list .)


state 34

    (17) declaration -> type_specifier IDENTIFIER . EQUAL expression SEMICOLON
    (15) identifier_list -> IDENTIFIER .
    (16) identifier_list -> IDENTIFIER . COMMA identifier_list

  ! shift/reduce conflict for EQUAL resolved as shift
    EQUAL           shift and go to state 54
    SEMICOLON       reduce using rule 15 (identifier_list -> IDENTIFIER .)
    LBRAKET         reduce using rule 15 (identifier_list -> IDENTIFIER .)
    COMMA           shift and go to state 55

  ! EQUAL           [ reduce using rule 15 (identifier_list -> IDENTIFIER .) ]


state 35
